--- a/style/scss/_var.scss
+++ b/style/scss/_var.scss
@@ -1,8 +1,9 @@
 //Global variables sheet
 
 //Colors in use:
-$bkgd-dark: rgba(35,35,35,1);
-$bkgd-medium: rgba(65,65,65,1);
+$bkgd-dark: rgba(0,0,0,1);
+$bkgd-medium: rgba(35,35,35,1);
+$bkgd-light: rgba(65,65,65,1);
 $neon-pink: rgba(255,0,255,1);
 $neon-cyan: rgba(0,255,255,1);
 $neon-green: rgba(102,255,178,1);
