--- a/style/scss/_var.scss
+++ b/style/scss/_var.scss
@@ -1,6 +1,7 @@
 //Global variables sheet
 
 //Colors in use:
+$black: rgba(0,0,0,1);
 $bkgd-dark: rgba(35,35,35,1);
 $bkgd-medium: rgba(65,65,65,1);
 $neon-pink: rgba(255,0,255,1);
@@ -9,9 +10,9 @@ $neon-green: rgba(102,255,178,1);
 $fore-light: rgba(250,250,250,1);
 
 //font stacks
-$body-font: 'Roboto', Arial, Helvetica, sans-serif;
-$display-font:  Native-Regular, Arial, Helvetica, sans-serif;
-
+$body-font: 'Native-Regular', Arial, Helvetica, sans-serif;
+$display-font: 'Native-Regular', Arial, Helvetica, cursive;
+//Native-Regular, Arial, Helvetica, sans-serif;
 
 //aspect ratio mixin https://css-tricks.com/snippets/sass/maintain-aspect-ratio-mixin/
 //Apply mixin to parent class.
