--- a/style/all.css
+++ b/style/all.css
@@ -855,14 +855,12 @@ footer {
   margin-bottom: 0.4em; }
 
 .social-wrap {
-  text-align: center;
-  margin-top: 25px; }
+  position: relative;
+  margin: 0 auto; }
 
 .social-icons {
-  display: inline-block;
   width: 32px;
   height: 32px;
-  margin-left: 24px;
-  margin-left: 24px; }
+  float: left; }
 
 /*# sourceMappingURL=all.css.map */
